--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Android Scientific Calculator</string>
-    <string name="del_button_text">DEL</string>
     <string name="action_settings">Settings</string>
     <string name="no_text"> </string>
     <string name="rcl">RCL</string>
@@ -32,33 +31,33 @@
     <string name="percent">%</string>
     <string name="open_bracket">(</string>
     <string name="close_bracket">)</string>
-    <string name="seven_button">7</string>
-    <string name="eight_button">8</string>
-    <string name="nine_button">9</string>
-    <string name="single_delete">del</string>
+    <string name="del_button">DEL</string>
     <string name="clear">AC</string>
     <string name="factorial">n!</string>
     <string name="combination">c(n,r)</string>
     <string name="permutation">p(n,r)</string>
     <string name="rate">Rate</string>
-    <string name="four_button">4</string>
-    <string name="five_button">5</string>
-    <string name="six_button">6</string>
-    <string name="multiplication">x</string>
+    <string name="multiplication">×</string>
     <string name="division">/</string>
     <string name="pi">ii</string>
     <string name="e">e</string>
     <string name="comma">,</string>
+    <string name="zero_button">0</string>
     <string name="one_button">1</string>
     <string name="two_button">2</string>
     <string name="three_button">3</string>
+    <string name="four_button">4</string>
+    <string name="five_button">5</string>
+    <string name="six_button">6</string>
+    <string name="seven_button">7</string>
+    <string name="eight_button">8</string>
+    <string name="nine_button">9</string>
     <string name="addition">+</string>
     <string name="subtraction">-</string>
-    <string name="zero_button">0</string>
     <string name="dot">.</string>
     <string name="exp">exp</string>
     <string name="ans">Ans</string>
-    <string name="equal_sign">=</string>
+    <string name="equals">=</string>
     <string name="x_value">x</string>
     <string name="plus_minus">+/-</string>
     <string name="plot">Plot</string>
